--- a/force-app/main/default/classes/XeroOrchestrator.cls
+++ b/force-app/main/default/classes/XeroOrchestrator.cls
@@ -27,45 +27,55 @@ public with sharing class XeroOrchestrator {
       return request;
     }
     
-    public static Boolean checkForPermission(){  
+    public static Boolean checkForPermission(String requiredPermission){  
       //Getting logged in user details 
-      User u = [SELECT Id, username,Name 
-                FROM User 
-                WHERE Id = :UserInfo.getUserId()];
+      User userRecord = [SELECT Id, username,Name 
+                     	 FROM User 
+                		 WHERE Id = :UserInfo.getUserId()];
 
       //Variable assignment - Permission Set Names
-      String readPermission = 'Xero_Integration_Read';
-      String editPermission = 'Xero_Integration_Edit';
+      String permission = '';
+        if(requiredPermission == 'Read')
+            permission = 'Xero_Integration_Read';
+        else
+      		 permission = 'Xero_Integration_Edit';
 
       //Getting permission set Ids. 
       //Getting permission set details in a set.
-      Set<String> permissions = new Set<String>{[SELECT Id FROM PermissionSet WHERE Name =:readPermission].Id,[SELECT Id FROM PermissionSet WHERE Name =:editPermission].Id};
+      List<PermissionSet> permissionSets = [SELECT Id FROM PermissionSet WHERE Name = :permission];
+
+      Set<String> permissions = new Set<String>{};
+      permissions.add(permissionSets[0].Id);
+      //permissions.add(permissionSets[1].Id);
       
 		  try{
         //If query returns something, which means user has permission set assigned. Return true in that case.
-			  PermissionSetAssignment pId = [SELECT Id FROM PermissionSetAssignment WHERE AssigneeId =: u.Id AND PermissionSetId IN :permissions];
-			  return true;
+			  List<PermissionSetAssignment> permissionSetIds = [SELECT Id FROM PermissionSetAssignment WHERE AssigneeId =: userRecord.Id AND PermissionSetId IN :permissions];
+        
+        return permissionSetIds.size() != 0 ? true : false;
 		  }
 		  catch(QueryException ex){
         //else the flow moves into the exception and returns false.
     	  return false;
 		  }    
     }
+
     
     //Method of orchestration.
-    public static String retrieveFromXero(String resource){
+    public static String retrieveFromXero(String resource,String filter){
         
-      BlueLogProcessor.IBlueLogger ibl = BlueLogProcessor.getLogger(XeroOrchestrator.class);
+      	BlueLogProcessor.IBlueLogger ibl = BlueLogProcessor.getLogger(XeroOrchestrator.class);
 	    ibl.debug('connectToXero method starts', 'retrieveFromXero');
         
       //Check if user has permission
-      if(checkForPermission()){
+      if(checkForPermission('Read')){
         //Fetch Tenant Id
         String tenantId = XeroCallout.getTenantId(resource);
           //Check if tenant id is returned, return and print an error instead.
           if(tenantId != '0'){
+              String resourceTobeSent = filter.length() > 0 ? resource+'/'+filter : resource;
               //Construct the request with parameters.
-              HttpRequest request = constructRequest('GET', resource, tenantId, null);
+              HttpRequest request = constructRequest('GET', resourceTobeSent, tenantId, null);
               ibl.debug('Request sent to fetch data: '+resource, 'retrieveFromXero');
               
               //Send request to callout method, deserialize the response and assign it to a variable called data.
@@ -75,7 +85,7 @@ public with sharing class XeroOrchestrator {
               //Check weather the response is successful or not, print and return either details.
               if(data.get('status')!= 200){
                 System.debug(data.get('err'));
-                ibl.error('Error Occured:'+data.get('status'), 'retrieveFromXero');
+                ibl.debug('Error Occured:'+data.get('err'), 'retrieveFromXero');
                 BlueLogProcessor.getInstance().forceFlush();
                 return (String)data.get('err');
               }
@@ -93,38 +103,56 @@ public with sharing class XeroOrchestrator {
       }
       else{
         System.debug('User does not have sufficiant access!');
-        ibl.debug('User does not have sufficiant access!', 'retrieveFromXero');
+        ibl.debug('User does not have sufficiant access!', 'connectToXero');
         BlueLogProcessor.getInstance().forceFlush();
         return 'User does not have sufficiant access!';
       }
     }
    
     // Method to Send Data from Salesforce to Xero
-    public static String sendToXero(ContactWrapper contct){
-      String resource = 'Contact';
-      String tenantId = XeroCallout.getTenantId(resource);
-      if(tenantId != '0'){
-           String serializedData = JSON.serialize(contct);
-          //Construct the request with parameters.
-          HttpRequest request = constructRequest('POST', resource, tenantId, serializedData);
+    public static String sendToXero(Contact contactToCreate){
+      	String resource = 'Contact';
+        ContactWrapper createContact = new ContactWrapper(contactToCreate);
+        
+      	BlueLogProcessor.IBlueLogger ibl = BlueLogProcessor.getLogger(XeroOrchestrator.class);
+	    ibl.debug('sendToXero method starts', 'sendToXero');
+        
+        //Check if user has permission
+        if(checkForPermission('Edit')){
+      		//Fetch Tenant Id
+      		String tenantId = XeroCallout.getTenantId(resource);
+      		//Convert Contact to JSON string
+      		String contactJson = JSON.serialize(createContact);
+      		System.debug(contactJson);
+      		if(tenantId != '0'){
+          		Object contactWrapperData = JSON.deserialize(contactJson, ContactWrapper.class);
+
+          		//Construct the request with parameters.
+          		HttpRequest request = constructRequest('POST', resource, tenantId, JSON.serialize(contactWrapperData));
+          		//Send request to callout method, deserialize the response and assign it to a variable called data.
+          		Map<String,Object> data = (Map<String,Object>)JSON.deserializeUntyped(XeroCallout.getXeroData(request,resource)); 
  
-          //Send request to callout method, deserialize the response and assign it to a variable called data.
-          Map<String,Object> data = (Map<String,Object>)JSON.deserializeUntyped(XeroCallout.getXeroData(request,resource)); 
- 
-          //Check weather the response is successful or not, print and return either details.
-          if(data.get('status')!= 200){
-            System.debug(data.get('err'));
-            return (String)data.get('err');
-          }
-          else{
-            System.debug(data.get('data')); 
-            return 'Contact created in Xero';
-          } 
-      	}
-      	else{
-              System.debug('There was some problem in retriving the Tenant Id');
-              return 'There was some problem in retriving the Tenant Id';
+          		//Check weather the response is successful or not, print and return either details.
+          		if(data.get('status')!= 200){
+            		System.debug(data.get('err'));
+            		return (String)data.get('err');
+          		}
+          		else{
+            			System.debug(data.get('data')); 
+            			return 'Contact created in Xero';
+          			} 
+      		}
+      		else{
+             		 System.debug('There was some problem in retriving the Tenant Id');
+              		return 'There was some problem in retriving the Tenant Id';
+        		}
         }
+        else{
+        System.debug('User does not have sufficiant access!');
+        ibl.debug('User does not have sufficiant access!', 'sendToXero');
+        BlueLogProcessor.getInstance().forceFlush();
+        return 'User does not have sufficiant access!';
+      }
     } 
 }
 
