--- a/force-app/main/default/classes/XeroOrchestratorTest.cls
+++ b/force-app/main/default/classes/XeroOrchestratorTest.cls
@@ -22,7 +22,7 @@ private with sharing class XeroOrchestratorTest {
         User u = [SELECT Id FROM User WHERE LastName='Rao'];
         System.runAs(u){
             Test.startTest();
-                String response = XeroOrchestrator.connectToXero('Contacts');
+                String response = XeroOrchestrator.connectToXero('Contacts','');
             Test.stopTest();
 
             Assert.areEqual('User does not have sufficiant access!',response,'User without permission allowed to access the data!');
@@ -34,7 +34,7 @@ private with sharing class XeroOrchestratorTest {
         User u = [SELECT Id FROM User WHERE LastName='Kumar'];
         System.runAs(u){
             Test.startTest();
-                String response = XeroOrchestrator.connectToXero('Conta');
+                String response = XeroOrchestrator.connectToXero('Conta','');
             Test.stopTest();
 
             Assert.areEqual('There was some problem in retriving the Tenant Id',response,'Tenant Id retrieved on providing wrong resource!');
@@ -49,7 +49,7 @@ private with sharing class XeroOrchestratorTest {
             Test.startTest();
                 
                 Test.setMock(HttpCalloutMock.class, new HttpMockFactory());
-                String data = XeroOrchestrator.connectToXero('Contacts');
+                String data = XeroOrchestrator.connectToXero('Contacts','');
                 
                 Assert.areEqual('Data Present',data,'Data did not return!');
                 
