--- a/force-app/main/default/classes/XeroCallout.cls
+++ b/force-app/main/default/classes/XeroCallout.cls
@@ -1,27 +1,35 @@
-//Actual callout method
+//Xero callout class
 public with sharing class XeroCallout {
     //Method to send request and return the response to the orchestrator
     public static String getXeroData(HttpRequest request,String resource){
+        BlueLogProcessor.IBlueLogger ibl = BlueLogProcessor.getLogger(XeroCallout.class); 
         try{
             //Send request
             HttpResponse response = new Http().send(request);
+            ibl.debug('Http Request Sent to Xero:'+request.getEndpoint()+ ' Method :' +request.getMethod(),'getXeroData');
+                      
             
             Map<String,Object> responseMap = new Map<String,Object>();
             
             //Check if response was successful else, throw an error.
             if(response.getStatusCode() != 200){
-                throw new XeroException('Status Code '+response.getStatusCode()+' Error Occured! '+response.getBody());
+                ibl.debug('Status Code '+ response.getStatusCode() +' Error: '+response.getBody(),'getXeroData');
             }
             else{
+                System.debug(response.getBody());
                 responseMap = (Map<String,Object>)JSON.deserializeUntyped(response.getBody());
+                ibl.debug('Http Request Sent to Xero: '+request.getEndpoint()+ ' Method :' +request.getMethod(), 'Response Recieved: '+response);
                 return createResponse(responseMap.get(resource),null,200);
             }
         }
         catch(XeroException ex){
-            System.debug('An Error Occurred! '+ex.getMessage() + 'Stack Trace: ' + ex.getStackTraceString());
+            ibl.error(ex, 'getXeroData');
+            BlueLogProcessor.getInstance().forceFlush();
             return createResponse(null,ex.getMessage(),400);
         }
+        BlueLogProcessor.getInstance().forceFlush();
         //Return the response at the end.
+        return null;
     }
 
     //Method to create a response object and sending it back to orchestrator
@@ -30,7 +38,6 @@ public with sharing class XeroCallout {
         responseMap.put('data', data);
         responseMap.put('err',err);
         responseMap.put('status',status);
-
         return (String)JSON.serialize(responseMap);
     }
 
@@ -39,6 +46,7 @@ public with sharing class XeroCallout {
     //Tenant Id is mandetory for fetching
     //We cannot fetch Invoices with tenant Id which was fetched with the scope as Contacts
     public static String getTenantId(String scope){
+        BlueLogProcessor.IBlueLogger ibl = BlueLogProcessor.getLogger(XeroCallout.class);    
         HttpRequest request = new HttpRequest();
         //Construct the request
         request.setMethod('GET');
@@ -48,24 +56,31 @@ public with sharing class XeroCallout {
         
         //Send the request, store the response
         try{
-        	HttpResponse response = new Http().send(request);
+        	HttpResponse response = new Http().send(request);		
             //Check weather the response was successful.
             if(response.getStatusCode() != 200){
-                System.debug(response);
-                throw new XeroException('Tenant Id Not returned!' + response.getBody());
+                ibl.debug(response.getBody(),'Tenant Id Not returned!'); 
             }
             else{
                 //Deserialize the response and return the tenant id value.
-                List<Object> tokenObject =  (List<Object>) JSON.deserializeUntyped(response.getBody());
-                Map<String,Object> tokenMap = (Map<String,Object>) tokenObject[0];
-                return (String)tokenMap.get('tenantId');
+                List<Object> result =  (List<Object>) JSON.deserializeUntyped(response.getBody());
+                Map<String,Object> tempMap = new Map<String,Object>();
+     		    for(Object obj : result) { 
+	    		    tempMap = (Map<String,Object>)obj; 
+                    ibl.debug('Request Sent to fetch Tenant ID: '+request.getEndpoint(),'Tenant ID Received :'+tempMap.get('tenantId'),'');
+    			    return (String)tempMap.get('tenantId'); 
+			    }                
             }
+            //'0' will be returned if response was returned but tenant id was not found.
+            return '0';
         }
         catch(Exception ex){
             //Exception will be thrown and again '0' will be returned if there was any error
-         	System.debug('Error ' + ex.getMessage());
+            ibl.error(ex, 'getTenantId');
+            BlueLogProcessor.getInstance().forceFlush();
             return '0';
         }
+        
     }
     //Custom exception to print custom error messages.
     class XeroException extends Exception{}
